# Agent-Office

./: .env.example  .gitignore  .ignore  CONTEXT.md  README.md  pyproject.toml  start-dashboard.bat  stop-dashboard.bat
agent_office/: __init__.py  alerts.py  backtest.py  cli.py  config.py  cycle.py  dashboard_export.py  execution.py  indicators.py  models.py  okx.py  optimizer.py  reconcile.py  risk.py  storage.py  strategy.py  web.py
config/: agent-office-optimized.toml  agent-office-tuned-2025.toml  agent-office.toml
data/ohlcv_cache/: ADA-USDT-USDT_1d_2019-10-03_2021-01-01.csv  ADA-USDT-USDT_1d_2020-10-03_2022-01-01.csv  ADA-USDT-USDT_1d_2021-10-03_2023-01-01.csv  ADA-USDT-USDT_1d_2022-10-03_2024-01-01.csv  ADA-USDT-USDT_1d_2023-10-03_2025-01-01.csv  ADA-USDT-USDT_1d_2024-10-03_2026-01-01.csv  ADA-USDT-USDT_1d_2025-10-03_2026-04-01.csv  ADA-USDT-USDT_4h_2018-10-03_2020-01-01.csv  ADA-USDT-USDT_4h_2019-01-01_2020-04-01.csv  ADA-USDT-USDT_4h_2019-10-03_2021-01-01.csv  ADA-USDT-USDT_4h_2020-10-03_2022-01-01.csv  ADA-USDT-USDT_4h_2021-10-03_2023-01-01.csv  ADA-USDT-USDT_4h_2022-10-03_2024-01-01.csv  ADA-USDT-USDT_4h_2023-10-03_2025-01-01.csv  ADA-USDT-USDT_4h_2024-10-03_2026-01-01.csv  (+120 more)
reports/: grid_pixel_dashboard.html
results/: grid-raw-walk-forward.csv
scripts/: start-dashboard.ps1  stop-dashboard.ps1
tests/: test_alerts.py  test_backtest.py  test_config.py  test_cycle_smoke.py  test_dashboard_export.py  test_env.py  test_okx_demo.py  test_okx_demo_integration.py  test_optimizer.py  test_reconcile.py  test_risk_layer.py  test_web_dashboard.py
(+5 files in other folders)
