[project]
name = "agent-office"
version = "0.1.0"
description = "Paper-first AI crypto trading office with deterministic risk controls."
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4",
    "certifi>=2024.0",
]

[tool.setuptools.packages.find]
include = ["agent_office*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
